Stash progress: create EventLoggerService
